--- a/src/app/componentes/calendario/calendario.component.html
+++ b/src/app/componentes/calendario/calendario.component.html
@@ -8,6 +8,5 @@
 
  <ion-content>
    <ion-img src= "http://icalendario.br.com/media/imprimir/2019/mensal/junho/calendario-junho-2019.png"> </ion-img>
-   <ion-button href = "exercicio"> Voltar  </ion-button>
-
+   <ion-button expand="full" color="danger" href = "exercicio"> Voltar  </ion-button>
    </ion-content>
