--- a/src/app/componentes/cadastro/cadastro.component.html
+++ b/src/app/componentes/cadastro/cadastro.component.html
@@ -7,12 +7,13 @@
 </ion-header>
 
  <ion-content>
-   <ion-input [(ngModel)]="nome"> Nome: </ion-input>
-   <ion-input [(ngModel)]= "Email"> Email: </ion-input>
-   <ion-input [(ngModel)]= "senha"> Definir Senha: </ion-input>
-   <ion-input [(ngModel)]= "imc"> I.M.C : </ion-input>
-   <ion-input [(ngModel)]= "altura"> Altura: </ion-input>
-   <ion-input [(ngModel)]= "sexo"> Sexo: </ion-input>
-   <ion-button href = "exercicio"> Próximo  </ion-button>
-
+   <ion-input [(ngModel)]="cadastro.nome"> Nome: </ion-input>
+   <ion-input [(ngModel)]= "cadastro.email"> Email: </ion-input>
+   <ion-input [(ngModel)]= "cadastro.senha"> Definir Senha: </ion-input>
+   <ion-input [(ngModel)]= "cadastro.imc"> I.M.C : </ion-input>
+   <ion-input [(ngModel)]= "cadastro.altura"> Altura: </ion-input>
+   <ion-input [(ngModel)]= "cadastro.sexo"> Sexo: </ion-input>
+   <ion-button expand="full" color="danger" (click)= "cadastro()"> Salvar </ion-button>
+   <ion-button expand="full" color="danger" href="exercicio"> Próximo </ion-button>
+   <ion-button expand="full" color="danger" href="sobre"> Mais Informações</ion-button>
    </ion-content>
