--- a/src/app/componentes/exercicio/exercicio.component.html
+++ b/src/app/componentes/exercicio/exercicio.component.html
@@ -6,6 +6,36 @@
   </ion-toolbar>
 </ion-header>
 
- <ion-content>
-   <ion-button href = "calendario"> Ir para calendário  </ion-button>
-   </ion-content>
+<ion-content>
+  <ion-card-title> Abdomem </ion-card-title>
+  <ion-img src="https://i.pinimg.com/originals/8b/f7/96/8bf7961805a871efb69669c5011cf0be.jpg"> </ion-img>
+  <ion-label> repita 15x </ion-label>
+  <h1> </h1>
+  <ion-img src="https://img.r7.com/images/2016/11/21/1ew20k1m59_42lz6za37b_file"> </ion-img>
+  <ion-label> Repita 14x (sete com cada perna alternando)</ion-label>
+    <h1> </h1>
+  <ion-img src="https://revistashape.com.br/wp-content/uploads/2017/08/Abdominales-Bicicleta-1-e1463136600661-300x266.jpg"> </ion-img>
+  <ion-label> Repita 20x alternando </ion-label>
+  <h1> </h1>
+  <ion-img src="https://www.exercicioemcasa.com.br/wp-content/uploads/2017/01/prancha-2.jpg"> </ion-img>
+  <ion-label> Mantenha por 30 segundos </ion-label>
+  <h1> </h1>
+  <ion-img src="https://www.mundoboaforma.com.br/wp-content/uploads/2016/10/elevacao-de-pernas-e1475519816360-620x318.jpg"> </ion-img>
+  <ion-label> Repita 10x </ion-label>
+  <h1> </h1>
+  <ion-img src="https://corpoacorpo.com.br/upload/galeria/large/6369.jpg"> </ion-img>
+
+  <ion-card-title> Pernas e Glúteos </ion-card-title>
+  <h1> </h1>
+  <ion-img src="http://jornaltribunadaregiao.com.br/wp-content/uploads/2015/09/alongamento.jpg"> </ion-img>
+  <ion-label> Repita 30x </ion-label>
+  <h1> </h1>
+  <ion-img src="http://paramais.com.br/wp-content/uploads/2017/09/Eleva%C3%A7%C3%A3o-de-quadril.jpg"> </ion-img>
+  <ion-label> Faça 3 sequências de 8x </ion-label>
+  <h1> </h1>
+  <ion-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNfQP4_xjMOm_1uu4kiOzA417GHogO7Cgfk2-OMPXjPQbKt1X0zw"> </ion-img>
+  <ion-label> faça 15x cada perna </ion-label>
+  <h1> </h1>
+  <ion-button expand= "full" color= "danger"href="calendario"> Ir para calendário </ion-button>
+  <ion-button expand="full" color="danger" href="sugestoes"> Sugestões</ion-button>
+</ion-content>
