--- a/src/app/componentes/cadastro/cadastro.component.html
+++ b/src/app/componentes/cadastro/cadastro.component.html
@@ -13,7 +13,7 @@
    <ion-input [(ngModel)]= "cadastro.imc"> I.M.C : </ion-input>
    <ion-input [(ngModel)]= "cadastro.altura"> Altura: </ion-input>
    <ion-input [(ngModel)]= "cadastro.sexo"> Sexo: </ion-input>
-   <ion-button expand="full" color="danger" (click)= "cadastro()"> Salvar </ion-button>
+   <ion-button expand="full" color="danger" (click)= "Cadastro()"> Salvar </ion-button>
    <ion-button expand="full" color="danger" href="exercicio"> Próximo </ion-button>
    <ion-button expand="full" color="danger" href="sobre"> Mais Informações</ion-button>
    </ion-content>
