--- a/src/app/componentes/cadastro/cadastro.component.html
+++ b/src/app/componentes/cadastro/cadastro.component.html
@@ -12,6 +12,7 @@
    <ion-input [(ngModel)]= "cadastro.senha"> Definir Senha: </ion-input>
    <ion-input [(ngModel)]= "cadastro.imc"> I.M.C : </ion-input>
    <ion-input [(ngModel)]= "cadastro.altura"> Altura: </ion-input>
+   <ion-input [(ngModel)]= "cadastro.idade"> Idade: </ion-input>
    <ion-input [(ngModel)]= "cadastro.sexo"> Sexo: </ion-input>
    <ion-button expand="full" color="danger" (click)= "Cadastro()"> Salvar </ion-button>
    <ion-button expand="full" color="danger" href="exercicio"> Próximo </ion-button>
