--- a/src/app/componentes/exercicio/exercicio.component.html
+++ b/src/app/componentes/exercicio/exercicio.component.html
@@ -7,7 +7,8 @@
 </ion-header>
 
 <ion-content>
-  <ion-card-title> Abdomem </ion-card-title>
+<h1>
+  <ion-title> Abdomem: </ion-title> </h1>
   <ion-img src="https://i.pinimg.com/originals/8b/f7/96/8bf7961805a871efb69669c5011cf0be.jpg"> </ion-img>
   <ion-label> repita 15x </ion-label>
   <h1> </h1>
