--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,6 +12,7 @@
     <ion-input [(ngModel)]="login.senha"> Senha: </ion-input>
     <ion-button expand="full" color="danger" (click)="salvar()"> Salvar login </ion-button>
     <ion-button expand="full" color="danger" href="exercicio"> Próximo </ion-button>
-    <ion-button expand="full" color="danger" href="cadastro"> Cadastrar-se</ion-button>
+    <ion-button expand="full" color="danger" href="cadastro"> Cadastrar-se </ion-button>
+    <ion-button expand="full" color="danger" href= "listar"> Lista </ion-button>
   </div>
 </ion-content>
