--- a/src/app/componentes/sobre/sobre.component.html
+++ b/src/app/componentes/sobre/sobre.component.html
@@ -1,20 +1,24 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Sobre
+      Go Training
     </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-card-title> Sobre o Aplicativo </ion-card-title>
+  <br>
+  <br>
+  <ion-card-title> Sobre o Aplicativo: </ion-card-title>
   <h1> </h1>
-  <ion-label> O Go Training é um aplicativo que visa auxiliar pessoas a perderem texto e definir o corpo. Então se essa é a sua vontade esse é o aplicativo perfeito para você!</ion-label>
+  <ion-label> O Go Training é um aplicativo que visa auxiliar pessoas a perderem peso e definirem o corpo. Então, se essa é a sua vontade esse é o aplicativo perfeito para você!</ion-label>
   <h1> </h1>
+  <br>
   <ion-card-title> Cuidados! </ion-card-title>
   <h1> </h1>
   <ion-label> O aplicativo não é recomendado para pessoas menores de 14 anos, já que envolve exercícios físicos que podem ser intesos. Recomendamos que façam
     os exercícios sempre respeitando seu próprio limite e que sigam uma alimentação saudável </ion-label>
   <h1> </h1>
+  <br>
   <ion-button expand="full" color="danger" href="exercicio"> Próximo </ion-button>
 
 </ion-content>
