--- a/src/app/componentes/sugestoes/sugestoes.component.html
+++ b/src/app/componentes/sugestoes/sugestoes.component.html
@@ -8,9 +8,16 @@
 
 <ion-content>
   <div class="ion-padding">
-    <ion-card-title> Sugestões de melhorias ou exercícios </ion-card-title>
-    <ion-input [(ngModel)]="sugestoes"> Sugestões: </ion-input>
-    <ion-button expand="full" color="danger" href="home"> Enviar </ion-button>
-
+    <ion-card-title> Sugestões de melhorias ou exercícios: </ion-card-title>
+    <ion-input [(ngModel)]="sugestoes.sugestoes">  </ion-input>
+    <br>
+    <br>
+    <ion-button expand="full" color="danger" (click)= "Sugerir()"> Enviar Sugestão </ion-button>
+    <ion-button expand="full" color="danger" href="home"> Voltar </ion-button>
+    <h1> </h1>
+    <br>
+    <br>
+    <br>
+    <ion-img src= "http://jbvi.com.br/images/pessoas-icon.png"> </ion-img>
   </div>
 </ion-content>
