--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,10 +9,16 @@
 <ion-content>
   <div class="ion-padding">
     <ion-input [(ngModel)]="login.nome"> Nome: </ion-input>
-    <ion-input [(ngModel)]="login.senha"> Senha: </ion-input>
+    <ion-input [(ngModel)]="login.senha" type= "password"> Senha: </ion-input>
+    <h1> </h1>
+    <h1> </h1>
     <ion-button expand="full" color="danger" (click)="salvar()"> Salvar login </ion-button>
-    <ion-button expand="full" color="danger" href="exercicio"> Próximo </ion-button>
     <ion-button expand="full" color="danger" href="cadastro"> Cadastrar-se </ion-button>
+    <ion-button expand="full" color="danger" href="exercicio"> Próximo </ion-button>
     <ion-button expand="full" color="danger" href= "listar"> Lista </ion-button>
+    <h1> </h1>
+    <br>
+    <br>
+    <ion-img src= "https://crossfitcapixaba.com.br/wp-content/uploads/2016/09/burpees.png"> </ion-img>
   </div>
 </ion-content>
