--- a/src/app/componentes/cadastro/listar/listar.page.html
+++ b/src/app/componentes/cadastro/listar/listar.page.html
@@ -1,9 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>listar</ion-title>
+    <ion-title>Lista de Pessoas Cadastradas </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
+  <h1> </h1>
+  <ion-label> &nbsp; &nbsp;  Nome    &nbsp;   &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp;     IMC    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   Idade </ion-label>
+  <br>
   <ion-list>
     <ion-item *ngFor = "let pessoa of listaUsuario | async">
       <ion-label>{{ pessoa.nome }}</ion-label>
@@ -12,5 +15,5 @@
     </ion-item>
   </ion-list>
   <br/>
-  <ion-button href = "home"> Voltar </ion-button>
+  <ion-button expand="full" color= "danger" href = "home"> Voltar </ion-button>
 </ion-content>
