--- a/src/app/componentes/exercicio/exercicio.component.html
+++ b/src/app/componentes/exercicio/exercicio.component.html
@@ -8,12 +8,12 @@
 
 <ion-content>
 <h1>
-  <ion-title> Abdomem: </ion-title> </h1>
+  <ion-title> Abdomen: </ion-title> </h1>
   <ion-img src="https://i.pinimg.com/originals/8b/f7/96/8bf7961805a871efb69669c5011cf0be.jpg"> </ion-img>
   <ion-label> repita 15x </ion-label>
   <h1> </h1>
   <ion-img src="https://img.r7.com/images/2016/11/21/1ew20k1m59_42lz6za37b_file"> </ion-img>
-  <ion-label> Repita 14x (sete com cada perna alternando)</ion-label>
+  <ion-label> Repita 14x (7 com cada perna alternando)</ion-label>
     <h1> </h1>
   <ion-img src="https://revistashape.com.br/wp-content/uploads/2017/08/Abdominales-Bicicleta-1-e1463136600661-300x266.jpg"> </ion-img>
   <ion-label> Repita 20x alternando </ion-label>
