--- a/src/app/componentes/exercicio/exercicio.component.html
+++ b/src/app/componentes/exercicio/exercicio.component.html
@@ -7,14 +7,13 @@
 </ion-header>
 
 <ion-content>
-<h1>
-  <ion-title> Abdomen: </ion-title> </h1>
+  <h1></h1>
   <ion-img src="https://i.pinimg.com/originals/8b/f7/96/8bf7961805a871efb69669c5011cf0be.jpg"> </ion-img>
   <ion-label> repita 15x </ion-label>
   <h1> </h1>
   <ion-img src="https://img.r7.com/images/2016/11/21/1ew20k1m59_42lz6za37b_file"> </ion-img>
   <ion-label> Repita 14x (7 com cada perna alternando)</ion-label>
-    <h1> </h1>
+  <h1> </h1>
   <ion-img src="https://revistashape.com.br/wp-content/uploads/2017/08/Abdominales-Bicicleta-1-e1463136600661-300x266.jpg"> </ion-img>
   <ion-label> Repita 20x alternando </ion-label>
   <h1> </h1>
@@ -37,6 +36,7 @@
   <ion-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNfQP4_xjMOm_1uu4kiOzA417GHogO7Cgfk2-OMPXjPQbKt1X0zw"> </ion-img>
   <ion-label> faça 15x cada perna </ion-label>
   <h1> </h1>
-  <ion-button expand= "full" color= "danger"href="calendario"> Ir para calendário </ion-button>
+  <ion-button expand="full" color="danger" href="calendario"> Ir para calendário </ion-button>
   <ion-button expand="full" color="danger" href="sugestoes"> Sugestões</ion-button>
+  <ion-button expand="full" color="danger" href="home"> Voltar ao início</ion-button>
 </ion-content>
