--- a/src/app/componentes/cadastro/cadastro.component.html
+++ b/src/app/componentes/cadastro/cadastro.component.html
@@ -6,15 +6,58 @@
   </ion-toolbar>
 </ion-header>
 
- <ion-content>
-   <ion-input [(ngModel)]="cadastro.nome"> Nome: </ion-input>
-   <ion-input [(ngModel)]= "cadastro.email"> Email: </ion-input>
-   <ion-input [(ngModel)]= "cadastro.senha"> Definir Senha: </ion-input>
-   <ion-input [(ngModel)]= "cadastro.imc"> I.M.C : </ion-input>
-   <ion-input [(ngModel)]= "cadastro.altura"> Altura: </ion-input>
-   <ion-input [(ngModel)]= "cadastro.idade"> Idade: </ion-input>
-   <ion-input [(ngModel)]= "cadastro.sexo"> Sexo: </ion-input>
-   <ion-button expand="full" color="danger" (click)= "Cadastro()"> Salvar </ion-button>
-   <ion-button expand="full" color="danger" href="sobre"> Mais Informações </ion-button>
-   <ion-button expand="full" color="danger" href="exercicio"> Próximo </ion-button>
-   </ion-content>
+<ion-content>
+  <ion-item>
+    <ion-label position="floating"> Nome: </ion-label>
+    <ion-input type="text" [(ngModel)]="cadastro.nome" placeholder="insira o seu nome:"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> Telefone: </ion-label>
+    <ion-input type="text" [(ngModel)]="cadastro.telefone" placeholder="insira o seu telefone:">
+    </ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> Email: </ion-label>
+    <ion-input type="text" [(ngModel)]="cadastro.email" placeholder="insira o seu email:">
+    </ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> Definir senha: </ion-label>
+    <ion-input type="password" [(ngModel)]="cadastro.senha" placeholder="insira uma senha:">
+    </ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> I.M.C: </ion-label>
+    <ion-input type="text" [(ngModel)]="cadastro.imc" placeholder="insira seu I.M.C:">
+    </ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> Altura </ion-label>
+    <ion-input type="text" [(ngModel)]="cadastro.altura" placeholder="insira sua altura:">
+    </ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> Idade: </ion-label>
+    <ion-input type="text" [(ngModel)]="cadastro.idade" placeholder="insira sua idade:">
+    </ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> Sexo: </ion-label>
+    <ion-input type="text" [(ngModel)]="cadastro.sexo" placeholder="insira seu sexo:">
+    </ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> Cidade: </ion-label>
+    <ion-input name="nome" [(ngModel)]="cidade.nome"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating"> Estado: </ion-label>
+    <ion-select [(ngModel)]="cidade.estado">
+      <ion-select-option *ngFor='let estado of listaEstado | async' [value]="estado">
+        {{estado.sigla}}
+      </ion-select-option>
+    </ion-select>
+  </ion-item>
+  <ion-button (click)="salvar()" expand="full" color="dark"> Salvar</ion-button>
+  <ion-button href="/" expand="full" color="dark"> Voltar </ion-button>
+</ion-content>
