--- a/src/app/componentes/barriga/barriga.component.html
+++ b/src/app/componentes/barriga/barriga.component.html
@@ -26,5 +26,5 @@
   <ion-img src="https://corpoacorpo.com.br/upload/galeria/large/6369.jpg"> </ion-img>
   <ion-button expand="full" color="danger" href="calendario"> Ir para calendário </ion-button>
   <ion-button expand="full" color="danger" href="sugestoes"> Sugestões</ion-button>
-  <ion-button expand="full" color="danger" href="home"> Voltar ao início</ion-button>
+  <ion-button expand="full" color="danger" href="home"> Sair </ion-button>
 </ion-content>
