--- a/src/app/componentes/exercicio/exercicio.component.html
+++ b/src/app/componentes/exercicio/exercicio.component.html
@@ -33,10 +33,16 @@
   <ion-img src="http://paramais.com.br/wp-content/uploads/2017/09/Eleva%C3%A7%C3%A3o-de-quadril.jpg"> </ion-img>
   <ion-label> Faça 3 sequências de 8x </ion-label>
   <h1> </h1>
-  <ion-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNfQP4_xjMOm_1uu4kiOzA417GHogO7Cgfk2-OMPXjPQbKt1X0zw"> </ion-img>
-  <ion-label> faça 15x cada perna </ion-label>
-  <h1> </h1>
-  <ion-button expand="full" color="danger" href="calendario"> Ir para calendário </ion-button>
-  <ion-button expand="full" color="danger" href="sugestoes"> Sugestões</ion-button>
-  <ion-button expand="full" color="danger" href="home"> Voltar ao início</ion-button>
+  <ion-img src="https://i0.wp.com/www.sitedebelezaemoda.com.br/wp-content/uploads/2017/01/afundo-eh-um-dos-melhores-exercicios-para-eliminar-os-culotes.jpg"> </ion-img>
+ <ion-label> faça 15x cada perna </ion-label>
+ <br>
+ <ion-img src="https://files.incrivel.club/files/news/part_46/463460/15589210-1631760-703605-0-1523012528-1523012539-1500-1-1523012539-728-f0505dbb05-1524779106.jpg"> </ion-img>
+ <ion-label> faça 12x cada perna </ion-label>
+ <h1> </h1>
+ <ion-img src="https://files.incrivel.club/files/news/part_46/463460/15589360-1635810-703904-0-1523013279-1523013307-1500-1-1523013307-728-7221235e4f-1524779106.jpg"> </ion-img>
+ <ion-label> faça 08x cada perna </ion-label>
+ <h1> </h1>
+ <ion-button expand="full" color="danger" href="calendario"> Ir para calendário </ion-button>
+ <ion-button expand="full" color="danger" href="home"> Sair</ion-button>
+ <ion-button expand="full" color="danger" href="sugestoes"> Sugestões</ion-button>
 </ion-content>
