--- a/src/app/componentes/sugestoes/listar-sugestoes/listar-sugestoes.component.html
+++ b/src/app/componentes/sugestoes/listar-sugestoes/listar-sugestoes.component.html
@@ -1,15 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Go Training</ion-title>
+    <ion-title>Sugestões</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <h1> </h1>
-  <ion-label> &nbsp; &nbsp;  Sugestões:   </ion-label>
   <ion-list>
-    <ion-item *ngFor = "let sugestoes of listaUsuario | async">
+    <ion-item *ngFor="let sugestoes of listaUsuario | async">
       <ion-label>{{ sugestoes.sugestoes }}</ion-label>
+      <ion-button (click)="excluir(sugestoes.key)" href="listar-sugestoes"> Excluir </ion-button>
     </ion-item>
   </ion-list>
-  <ion-button expand= "full" color= "danger" href = "home"> Voltar ao início </ion-button>
+  <ion-button expand="full" color="danger" href="home"> Voltar ao início </ion-button>
 </ion-content>
