--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,10 +11,10 @@
     <ion-input [(ngModel)]="login.email"> Email: </ion-input>
     <ion-input [(ngModel)]="login.senha" type= "password"> Senha: </ion-input>
     <h1> </h1>
-    <ion-button expand="full" color="danger" (click)="logar()">Acessar</ion-button>
-    <ion-button expand="full" color="danger" href="cadastro"> Cadastrar-se </ion-button>
+    <ion-button expand="block" color="danger" (click)="logar()">Acessar</ion-button>
+    <ion-button expand="block" color="danger" href="cadastro"> Cadastrar-se </ion-button>
+    <ion-button (click)= "redefinir()" expand= "block" color= "danger"> Esqueceu a senha? </ion-button>
     <h1> </h1>
-    <br>
     <br>
     <br>
     <br>
